# alx_c

./: 3-get_op_func.c  CMakeLists.txt  Makefile  README.md  array_of_characters.c  calc_h.h  free_malloc.c  function_pointer_switch.c  function_pointers.c  function_pointers.h  macros.c  main.h  malloc_create_string.c  malloc_exercise_2.c  malloc_lesson.c  strdup.c
Custom Print/: _print_f.c  fetch_print.c  main.h  print_alphanumeric.c  print_functions.c  print_percent.c  tests.c
File IO/: file_read.c
bit_manipulation/: bit_manipulation.c
more_linkedlists/: add_node_end.c
ssl_linked_lists/: list.h  print_list.c
