cmake_minimum_required(VERSION 3.22)
project(alx_c C)

set(CMAKE_C_STANDARD 99)

add_executable(malloc_lesson malloc_lesson.c)
add_executable(malloc_exercise_2 malloc_exercise_2.c)
add_executable(malloc_create_string malloc_create_string.c)
add_executable(free_malloc free_malloc.c)
add_executable(array_of_characters array_of_characters.c)
add_executable(strdup strdup.c)